Update templates to conform with `terraform fmt`

--- a/templates/sqs-dashboard.erb
+++ b/templates/sqs-dashboard.erb
@@ -5,20 +5,20 @@ resource "datadog_timeboard" "<%= convox_app.gsub(/[^a-zA-Z]/,'-') %>-sqs-overvi
   title       = "<%= convox_app %> - SQS Overview"
   description = "<%= convox_app %> - SQS Overview"
   read_only   = true
+<%- domain_events.sort_by(&:first).each do |(event_name, event_config)| -%>
 
-<% domain_events.sort_by(&:first).each do |(event_name, event_config)| %>
   graph {
-    title = "<%=event_name %> Read / Write"
-    viz   = "timeseries"
+    title     = "<%=event_name %> Read / Write"
+    viz       = "timeseries"
     precision = 0
 
     request {
-      q = "sum:aws.sqs.number_of_messages_sent{queuename:${module.<%=event_name %>.sqs_queue_name}}.as_count()"
+      q          = "sum:aws.sqs.number_of_messages_sent{queuename:${module.<%=event_name %>.sqs_queue_name}}.as_count()"
       aggregator = "sum"
     }
 
     request {
-      q = "sum:aws.sqs.number_of_messages_deleted{queuename:${module.<%=event_name %>.sqs_queue_name}}.as_count()"
+      q          = "sum:aws.sqs.number_of_messages_deleted{queuename:${module.<%=event_name %>.sqs_queue_name}}.as_count()"
       aggregator = "sum"
     }
   }
@@ -30,36 +30,36 @@ resource "datadog_timeboard" "<%= convox_app.gsub(/[^a-zA-Z]/,'-') %>-sqs-overvi
     precision = 0
 
     request {
-      q = "max:aws.sqs.approximate_age_of_oldest_message{queuename:${module.<%=event_name %>.sqs_queue_name}}.as_count()"
+      q          = "max:aws.sqs.approximate_age_of_oldest_message{queuename:${module.<%=event_name %>.sqs_queue_name}}.as_count()"
       aggregator = "last"
 
       conditional_format {
         comparator = "<"
-        value = 300
-        palette = "white_on_green"
+        value      = 300
+        palette    = "white_on_green"
       }
 
       conditional_format {
         comparator = ">"
-        value = 299
-        palette = "white_on_yellow"
+        value      = 299
+        palette    = "white_on_yellow"
       }
+
       conditional_format {
         comparator = ">"
-        value = 600
-        palette = "white_on_red"
+        value      = 600
+        palette    = "white_on_red"
       }
     }
-
   }
 
   graph {
-    title = "<%=event_name %> Dead Letter Queue Size"
-    viz   = "timeseries"
+    title     = "<%=event_name %> Dead Letter Queue Size"
+    viz       = "timeseries"
     precision = 0
 
     request {
-      q = "sum:aws.sqs.approximate_number_of_messages_visible{queuename:${module.<%=event_name %>.sqs_dead_letter_queue_name}}.as_count()"
+      q          = "sum:aws.sqs.approximate_number_of_messages_visible{queuename:${module.<%=event_name %>.sqs_dead_letter_queue_name}}.as_count()"
       aggregator = "sum"
     }
   }
@@ -71,43 +71,43 @@ resource "datadog_timeboard" "<%= convox_app.gsub(/[^a-zA-Z]/,'-') %>-sqs-overvi
     precision = 0
 
     request {
-      q = "max:aws.sqs.approximate_age_of_oldest_message{queuename:${module.<%=event_name %>.sqs_dead_letter_queue_name}}.as_count()"
+      q          = "max:aws.sqs.approximate_age_of_oldest_message{queuename:${module.<%=event_name %>.sqs_dead_letter_queue_name}}.as_count()"
       aggregator = "last"
 
       conditional_format {
         comparator = "<"
-        value = 1
-        palette = "white_on_green"
+        value      = 1
+        palette    = "white_on_green"
       }
 
       conditional_format {
         comparator = ">"
-        value = 1
-        palette = "white_on_yellow"
+        value      = 1
+        palette    = "white_on_yellow"
       }
+
       conditional_format {
         comparator = ">"
-        value = 3
-        palette = "white_on_red"
+        value      = 3
+        palette    = "white_on_red"
       }
     }
-
   }
-<% end %>
+<%- end -%>
+<%- sqs_queues.each do |queue_name, queue_config| -%>
 
-<% sqs_queues.each do |queue_name, queue_config| %>
   graph {
-    title = "<%=queue_name %> Read / Write"
-    viz   = "timeseries"
+    title     = "<%=queue_name %> Read / Write"
+    viz       = "timeseries"
     precision = 0
 
     request {
-      q = "sum:aws.sqs.number_of_messages_sent{queuename:<%= queue_config["name"] %>}.as_count()"
+      q          = "sum:aws.sqs.number_of_messages_sent{queuename:<%= queue_config["name"] %>}.as_count()"
       aggregator = "sum"
     }
 
     request {
-      q = "sum:aws.sqs.number_of_messages_deleted{queuename:<%= queue_config["name"] %>}.as_count()"
+      q          = "sum:aws.sqs.number_of_messages_deleted{queuename:<%= queue_config["name"] %>}.as_count()"
       aggregator = "sum"
     }
   }
@@ -119,26 +119,27 @@ resource "datadog_timeboard" "<%= convox_app.gsub(/[^a-zA-Z]/,'-') %>-sqs-overvi
     precision = 0
 
     request {
-      q = "max:aws.sqs.approximate_age_of_oldest_message{queuename:<%= queue_config["name"] %>}.as_count()"
+      q          = "max:aws.sqs.approximate_age_of_oldest_message{queuename:<%= queue_config["name"] %>}.as_count()"
       aggregator = "last"
 
       conditional_format {
         comparator = "<"
-        value = 1
-        palette = "white_on_green"
+        value      = 1
+        palette    = "white_on_green"
       }
 
       conditional_format {
         comparator = ">"
-        value = 1
-        palette = "white_on_yellow"
+        value      = 1
+        palette    = "white_on_yellow"
       }
+
       conditional_format {
         comparator = ">"
-        value = 3
-        palette = "white_on_red"
+        value      = 3
+        palette    = "white_on_red"
       }
     }
   }
-<% end %>
+<%- end -%>
 }
