--- a/templates/services-overview.erb
+++ b/templates/services-overview.erb
@@ -100,7 +100,7 @@ resource "datadog_timeboard" "<%= convox_app.gsub(/[^a-zA-Z]/,'-') %>-service-ov
 <% end %>
 }
 
-<% if mem_usage_opt_in %>
+<% if mem_usage_opt_in == true %>
   <% config["services"].sort_by(&:first).each do |(service_name, service_config)| %>
     resource "datadog_monitor" "dead-letter-monitor" {
       count            = "${var.opt_in}"
