--- a/templates/services-overview.erb
+++ b/templates/services-overview.erb
@@ -107,7 +107,7 @@ resource "datadog_timeboard" "<%= convox_app.gsub(/[^a-zA-Z]/,'-') %>-service-ov
       type             = "metric alert"
       locked           = true
       message          = "<%= service_name %> Memory usage >= 99% for the last hour. @<%= pagerduty_team %>"
-      query            = "(min(last_1h):max:docker.mem.rss{task_name:${var.convox_created_resource_name_prefix}-<%= convox_app %>-<%= service_name %>} / max:docker.mem.limit{task_name:<%= service_name %>}) >= 0.98"
+      query            = "min(last_1h):max:docker.mem.rss{task_name:${var.convox_created_resource_name_prefix}-<%= convox_app %>-<%= service_name %>} / max:docker.mem.limit{task_name:<%= service_name %>} >= 0.98"
     }
   <% end %>
 <% end %>
