--- a/templates/services-overview.erb
+++ b/templates/services-overview.erb
@@ -61,12 +61,12 @@ resource "datadog_timeboard" "<%= convox_app.gsub(/[^a-zA-Z]/,'-') %>-service-ov
     precision = 0
 
     request {
-      q          = "min:aws.elb.healthy_host_count.minimum{host:${lookup(convox_app.<%= convox_app %>.balancers, "<%= service_name %>")}}"
+      q          = "min:aws.elb.healthy_host_count.minimum{host:${convox_app.<%= convox_app %>.balancers["<%= service_name %>"]}}"
       aggregator = "min"
     }
 
     request {
-      q          = "max:aws.elb.un_healthy_host_count.maximum{host:${lookup(convox_app.<%= convox_app %>.balancers, "<%= service_name %>")}}"
+      q          = "max:aws.elb.un_healthy_host_count.maximum{host:${convox_app.<%= convox_app %>.balancers["<%= service_name %>"]}}"
       aggregator = "max"
     }
   }
@@ -77,7 +77,7 @@ resource "datadog_timeboard" "<%= convox_app.gsub(/[^a-zA-Z]/,'-') %>-service-ov
     precision = 0
 
     request {
-      q          = "max:aws.elb.surge_queue_length{host:${lookup(convox_app.<%= convox_app %>.balancers, "<%= service_name %>")}}"
+      q          = "max:aws.elb.surge_queue_length{host:${convox_app.<%= convox_app %>.balancers["<%= service_name %>"]}}"
       aggregator = "min"
     }
   }
@@ -89,25 +89,25 @@ resource "datadog_timeboard" "<%= convox_app.gsub(/[^a-zA-Z]/,'-') %>-service-ov
     precision = 0
 
     request {
-      q          = "sum:aws.elb.httpcode_backend_2xx{host:${lookup(convox_app.<%= convox_app %>.balancers, "<%= service_name %>")}}.as_count()"
+      q          = "sum:aws.elb.httpcode_backend_2xx{host:${convox_app.<%= convox_app %>.balancers["<%= service_name %>"]}}.as_count()"
       aggregator = "sum"
       type       = "bars"
     }
 
     request {
-      q          = "sum:aws.elb.httpcode_backend_3xx{host:${lookup(convox_app.<%= convox_app %>.balancers, "<%= service_name %>")}}.as_count()"
+      q          = "sum:aws.elb.httpcode_backend_3xx{host:${convox_app.<%= convox_app %>.balancers["<%= service_name %>"]}}.as_count()"
       aggregator = "sum"
       type       = "bars"
     }
 
     request {
-      q          = "sum:aws.elb.httpcode_backend_4xx{host:${lookup(convox_app.<%= convox_app %>.balancers, "<%= service_name %>")}}.as_count()"
+      q          = "sum:aws.elb.httpcode_backend_4xx{host:${convox_app.<%= convox_app %>.balancers["<%= service_name %>"]}}.as_count()"
       aggregator = "sum"
       type       = "bars"
     }
 
     request {
-      q          = "sum:aws.elb.httpcode_backend_5xx{host:${lookup(convox_app.<%= convox_app %>.balancers, "<%= service_name %>")}}.as_count()"
+      q          = "sum:aws.elb.httpcode_backend_5xx{host:${convox_app.<%= convox_app %>.balancers["<%= service_name %>"]}}.as_count()"
       aggregator = "sum"
       type       = "bars"
     }
@@ -119,17 +119,17 @@ resource "datadog_timeboard" "<%= convox_app.gsub(/[^a-zA-Z]/,'-') %>-service-ov
     precision = 0
 
     request {
-      q          = "max:aws.elb.latency.maximum{host:${lookup(convox_app.<%= convox_app %>.balancers, "<%= service_name %>")}}.as_count()"
+      q          = "max:aws.elb.latency.maximum{host:${convox_app.<%= convox_app %>.balancers["<%= service_name %>"]}}.as_count()"
       aggregator = "max"
     }
 
     request {
-      q          = "max:aws.elb.latency.p99{host:${lookup(convox_app.<%= convox_app %>.balancers, "<%= service_name %>")}}.as_count()"
+      q          = "max:aws.elb.latency.p99{host:${convox_app.<%= convox_app %>.balancers["<%= service_name %>"]}}.as_count()"
       aggregator = "max"
     }
 
     request {
-      q          = "max:aws.elb.latency.p95{host:${lookup(convox_app.<%= convox_app %>.balancers, "<%= service_name %>")}}.as_count()"
+      q          = "max:aws.elb.latency.p95{host:${convox_app.<%= convox_app %>.balancers["<%= service_name %>"]}}.as_count()"
       aggregator = "max"
     }
   }
